--- a/application/modules/site/views/scripts/rodape.phtml
+++ b/application/modules/site/views/scripts/rodape.phtml
@@ -1,170 +1,1 @@
-
-<!-- FOOTE DESKTOP -->
-<footer class="noneMobile noneTablet">
-	<div class="container">
-		 <div class="top-footer">
-		 	<h2>Simualção de propostas</h2>
-		 	<p>Simule seu próprio sistema de segurança informando dados da planta de seu imóvel.</p>
-		 	<a href="" title="Iniciar Simulação" class="btn btn-branco">Iniciar simulação</a>
-		 </div>
-		 <div class="middle-footer">
-			 		<ul class="paginas sem-borda">
-			 				<li><h2>A Teleatlantic</h2></li>	
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/institucional/sobre-empresa" title="Sobre a Empresa" class="">Sobre a Empresa</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/institucional/abese" title="ABESE" class="">ABESE</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/institucional/imprensa" title="Imprensa" class="">Imprensa</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/institucional/representantes" title="Seja um Representante" class="">Seja um Representante</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/institucional/trabalhe-conosco" title="Trabalhe Conosco" class="">Trabalhe Conosco</a></li>
-			 		</ul>
-			 		<ul class="paginas">
-			 				<li><h2>Soluções em monitoramento</h2></li>	
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/solucoes/monitoramento-residencial" title="Monitoramento Residencial" class="">Monitoramento Residencial</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/solucoes/monitoramento-comercial" title="Monitoramento Comercial" class="">Monitoramento Comercial</a></li>
-			 		</ul>
-			 		<ul class="paginas">
-			 				<li><h2><a href="<?php echo $this->baseUrl(); ?>/projetos-especiais" title="Projetos Especiais" class="">Projetos especiais</a></h2></li>	
-			 		</ul>
-					<ul class="paginas">
-			 				<li><h2>Serviços</h2></li>	
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/teleview" title="TeleView" class="">TeleView</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/tele-gps" title="Tele GPS" class="">Tele GPS</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/tele-online" title="Tele Online" class="">Tele Online</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/supervisao-motorizada" title="Supervisão Motorizada" class="">Supervisão Motorizada</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/tele-ronda" title="Tele Ronda" class="">Tele Ronda</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/tele-service" title="Tele Service" class="">Tele Service</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/tele-control" title="Tele Control" class="">Tele Control</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/tele-aviso-arme" title="Tele Aviso-Arme" class="">Tele Aviso-Arme</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/tele-emergencia" title="Tele Emergência" class="">Tele Emergência</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/esta-de-mudanca" title="Está de mundaça?" class="">Está de mudança?</a></li>
-			 				<li><a href="<?php echo $this->baseUrl(); ?>/servicos/servico-manutencao" title="Serviços de Manutenção" class="">Serviços de Manutenção</a></li>
-			 		</ul>
-			 		<div class="contatos-footer">
-				 		<div class="fale">
-				 			<h2 onclick="javascript:location.href='<?php echo $this->baseUrl(); ?>/fale-conosco';" style="cursor:pointer;">fale conosco</h2>
-				 			<ul class="formas-contato">
-				 				<li><a href="" title="" class="sprite-icones icone icone-carta"></a></li>
-				 				<li><a href="" title="" class="sprite-icones icone icone-chat2"></a></li>
-				 				<li><a href="" title="" class="sprite-icones icone icone-facebook"></a></li>
-				 				<li><a href="" title="" class="sprite-icones icone icone-twitter"></a></li>	
-				 			</ul>
-				 			<p>
-				 				<span>São Paulo</span>
-				 				<span><small>(11)</small>3811.1000</span>
-				 			</p>
-				 			<p>
-				 				<span>Outras Localidades</span>
-				 				<span>4002.7222</span>
-				 			</p>
-				 		</div>
-				 		<ul class="paginas">
-				 			<li><h2><a href="<?php echo $this->baseUrl(); ?>/faq" title="FAQ" class="">Faq</a></h2></li>	
-				 		</ul>
-			 		</div>			 		
-		 </div>  
-		 <div class="placa">
-			 			<img src="images/placa-teleatlantic.png" alt="Teleatlantic protegido 24h">
-			 			<p>
-			 				<span>&copy; 2014 Teleatlantic</span><br/>
-			 				<small>Todos os direitos reservados</small>
-			 			</p>	
-			 		</div>                                                                                                                                                                                                                                                                                                                                                         
-	</div>
-</footer>
-<!-- END FOOTER DESKTOP -->
-
-<footer class="noneDesktop noneMobile">
-	<div class="container">
-		<div class="top-footer">
-		 	<h2>Simualção de propostas</h2>
-		 	<p>Simule seu próprio sistema de segurança informando dados da planta de seu imóvel.</p>
-		 	<a href="" title="Iniciar Simulação" class="btn btn-branco">Iniciar simulação</a>
-		 </div>
-		 <div class="coluna-esquerda">
-		 	<ul class="bloco left">
-		 		<li><a href="" title="" class="titulo">A teleatlantic</a></li>
-		 		<li><a href="" title="">ABESE</a></li>
-		 		<li><a href="" title="">Imprensa</a></li>
-		 		<li><a href="" title="">Seja um Representante</a></li>
-		 		<li><a href="" title="">Trabalhe Conosco</a></li>
-		 	</ul>
-		 	<ul class="bloco right">
-		 		<li><a href="" title="" class="titulo">Soluções em monitoramento</a></li>
-		 		<li><a href="" title="">Monitoramento Residencial</a></li>
-		 		<li><a href="" title="">Monitoramento Comercial</a></li>
-		 	</ul>
-		 	<ul class="bloco margem right">
-		 		<li><a href="" title="" class="titulo">Projetos Especiais</a></li>
-		 	</ul>
-		 	<div class="fale">
-				 			<h2>fale conosco</h2>
-				 			<ul class="formas-contato">
-				 				<li><a href="" title="" class="sprite-icones icone icone-carta"></a></li>
-				 				<li><a href="" title="" class="sprite-icones icone icone-chat2"></a></li>
-				 				<li><a href="" title="" class="sprite-icones icone icone-facebook"></a></li>
-				 				<li><a href="" title="" class="sprite-icones icone icone-twitter"></a></li>	
-				 			</ul>
-				 			<p>
-				 				<span>São Paulo</span>
-				 				<span><small>(11)</small>3811.1000</span>
-				 			</p>
-				 			<p>
-				 				<span>Outras Localidades</span>
-				 				<span>4002.7222</span>
-				 			</p>
-			</div>
-			<div class="placa left">
-			 			<img src="images/placa-teleatlantic.png" alt="Teleatlantic protegido 24h">
-			 			<p>
-			 				<span>&copy; 2014 Teleatlantic</span><br/>
-			 				<small>Todos os direitos reservados</small>
-			 			</p>	
-			</div>  
-
-		</div>
-
-		<div class="coluna-direita">
-			<ul class="bloco left">
-		 		<li><a href="" title="" class="titulo">Serviços</a></li>
-		 		<li><a href="" title="">TeleView</a></li>
-		 		<li><a href="" title="">Tele GPS</a></li>
-		 		<li><a href="" title="">Tele Online</a></li>
-		 		<li><a href="" title="">Supervisão Motorizada</a></li>
-		 		<li><a href="" title="">Tele Ronda</a></li>
-		 		<li><a href="" title="">Tele Service</a></li>
-		 		<li><a href="" title="">Tele Control</a></li>
-		 		<li><a href="" title="">Tele Aviso-Arme</a></li>
-		 		<li><a href="" title="">Tele Emergência</a></li>
-		 		<li><a href="" title="">Está de Mudança?</a></li>
-		 		<li><a href="" title="">Serviços de Manutenção</a></li>
-		 	</ul>
-		 	<ul class="bloco left">
-		 		<li><a href="" title="" class="titulo">FAQ</a></li>
-		 	</ul>
-		</div>
-	</div>
-</footer>
-
-
-<div class="footer-abese noneMobile">
-		<div class="container">
-			<p>A TELEATLANTIC é integrante e sócia fundadora da <span>ABESE</span></p>
-			<a href="" target="_blank" title="ABESE"><img src="images/logo-abese.png" alt="ABESE"></a>
-			<a href="http://www.vm2.com.br" target="_blank" title="VM2 Agência digital"><img src="images/logo-vm2.png" alt="VM2 Agência digital"></a>
-		</div>
-</div>
-
-<footer class="noneDesktop noneTablet">
-	<div class="top"></div>
-	<img src="images/mobile/placa-footer.png" class="placa">
-	<div class="container">
-		<div class="direitos">
-			<p>
-				<span>&copy; 2013 TELEATLANTIC</span>
-				<span>Todos os direitos reservados</span>
-			</p>
-			<a href="http://www.vm2.com.br" target="_blank" title="VM2 Agência Web">
-				<img src="images/mobile/vm2.png" alt="VM2 Agência Web">
-			</a>
-		</div>
-	</div>
-</footer>
+<p>Rodape do site</p>
