mvc pratico implementado

--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -1,2 +1,5 @@
-<p>Conteudo da Index do site</p>
-<hr>
+<main>
+	<p>Conteudo da Index do site</p>
+	<p><a href="<?php echo $this->baseUrl()?>/detalhe"><?php echo App_Funcoes_Texto::cortar($this->texto);?></a></p>
+	<hr>
+</main>	
