configuracoes de projeto

--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -1,5 +1,5 @@
-<main>
-	<p>Conteudo da Index do site</p>
-	<p><a href="<?php echo $this->baseUrl()?>/detalhe"><?php echo App_Funcoes_Texto::cortar($this->texto);?></a></p>
+<main style="width:900px; margin:0 auto;">
+	<h1>Conteudo da Index do site</h1>
+	<h3><a href="<?php echo $this->baseUrl()?>/detalhe"><?php echo App_Funcoes_Texto::cortar($this->texto);?></a></h3>
 	<hr>
 </main>	
