--- a/application/modules/site/views/scripts/index/detalhe.phtml
+++ b/application/modules/site/views/scripts/index/detalhe.phtml
@@ -1,5 +1,5 @@
-<main>
-	<p>Conteudo da Index-detalhe do site</p>
-	<p><?php echo $this->texto;?></p>
+<main style="width:900px; margin:0 auto;">
+	<h1>Conteudo da Index-detalhe do site</h1>
+	<h3><?php echo $this->texto;?></h3>
 	<hr>
 </main>	
