--- a/application/modules/site/views/scripts/topo.phtml
+++ b/application/modules/site/views/scripts/topo.phtml
@@ -1,4 +1,8 @@
 <!-- Navigation -->
+<?php
+$router = Zend_Controller_Front::getInstance()->getRouter();
+$act = $router->getCurrentRoute()->getDefaults()['action'];
+?>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -114,19 +118,19 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
+                    <li class="<?php $act == 'index' ? print  'active' : '' ?>">
                         <a href="<?php echo $this->baseUrl()?>"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
-                    <li>
+                    <li class="<?php $act == 'charts'  ? print 'active' : '' ?>">
                         <a href="<?php echo $this->baseUrl()?>/charts"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
                     </li>
-                    <li>
+                    <li class="<?php $act == 'tables' ? print  'active' : '' ?>">
                         <a href="<?php echo $this->baseUrl()?>/tables"><i class="fa fa-fw fa-table"></i> Tables</a>
                     </li>
-                    <li>
+                    <li class="<?php $act == 'forms' ?  print 'active' : '' ?>">
                         <a href="<?php echo $this->baseUrl()?>/forms"><i class="fa fa-fw fa-edit"></i> Forms</a>
                     </li>
-                    <li>
+                    <li class="<?php $act == 'bootstrap-elements' ? print  'active' : '' ?>">
                         <a href="<?php echo $this->baseUrl()?>/bootstrap-elements"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
                     </li>
                 </ul>
